--- a/lang/en.json
+++ b/lang/en.json
@@ -220,7 +220,7 @@
     "Instructions": "Instructions",
     "Languages": "Languages",
     "Language Keywords of English": "Language Keywords of English",
-    "Money Out Details": "Money Out Details",
+    "Money Out Details": "Cash-out Request Details",
     "Add Money": "Top-up Wallet",
     "Update Gateway": "Update Gateway",
     "Automatic Add Money": "Automatic Add Money",
@@ -421,10 +421,10 @@
     "To Exchange": "To Exchange",
     "Total Exchange Amount": "Total Exchange Amount",
     "Converted Amount": "Converted Amount",
-    "Total Charge": "Total Charge",
+    "Total Charge": "Total Fees",
     "Will Get": "Will Get",
     "Confirm": "Confirm",
-    "request-amount": "request-amount",
+    "request-amount": "Cash-out Amount",
     "profile": "Profile",
     "Phone": "Phone",
     "Deactive": "Deactive",
@@ -484,7 +484,7 @@
     "I have agreed with": "By proceeding, you agree to our ",
     "page.view": "page.view",
     "terms-and-conditions": "terms and conditions",
-    "Terms Of Use": "T&C",
+    "Terms Of Use": "Terms and Conditions",
     "Privacy Policy": "Privacy Policy",
     "Transaction ID": "Transaction ID",
     "Reject Reason": "Reject Reason",
@@ -645,7 +645,8 @@
     "enter Title": "Enter Title",
     "category": "Category",
     "log Out Content": "Are you sure you want to log out?",
-    "delete Account Content": "Are you sure you want to delete your account?This action cannot be undone. Your account and all related data will be permanently deleted. If you change your mind later, you will need to contact PeacePay Support to request reactivation.",
+    "delete Account Content": "Are you sure you want to delete your account?
+This action cannot be undone. Your account and all related data will be permanently deleted. If you change your mind later, you will need to contact PeacePay Support to request reactivation.",
     "select Category": "Select Category",
     "select My Role": "Select My Role",
     "who Will Pay The Fees": "Who will pay the fees",
@@ -653,7 +654,7 @@
     "user Name Or Email": "Username/Email",
     "select Payment Method": "Select Payment Method",
     "will Pay": "Will Pay",
-    "preview": "Please Confirm Your Top-up",
+    "preview": "Review & Confirm Your Wallet Transaction",
     "Escrow Request": "Escrow Request",
     "total Amount": "Total Amount",
     "fees Charge": "Fees & Charge",
@@ -665,9 +666,9 @@
     "buyer Pay": "Buyer Pay",
     "confirm Pay": "Confirm & Pay",
     "add New Escrow Confirmation MSG": "Your escrow request has been submit successfully, Please wait for admin approval.",
-    "add Money Confirmation MSG": "Your money has been added successfully, Thanks for using Escroc.",
+    "add Money Confirmation MSG": "Your wallet has been topped up successfully. Thank you for using PeacePay.",
     "money Out Submit": "Money Out Submit",
-    "money Out Confirmation MSG": "Your money has been out successfully, Thanks for using Escroc.",
+    "money Out Confirmation MSG": "Your cash-out request has been submitted successfully. The amount will be transferred to your selected wallet or bank account within 1 business day. You’ll receive a notification once the transaction is complete.",
     "exchange": "Exchange",
     "exchange Details": "Exchange Details",
     "exchange Currency": "Exchange Currency",
@@ -712,6 +713,105 @@
     "valid User": "Valid User",
     "invalid User": "Invalid User",
     "exchange MSG": "Cant exchange in same currency.",
+    "forgot Password": "Forgot PIN?",
+    "forgot Password Ask": "Forgot PIN?",
+    "Profile Settings": "Profile Settings",
+    "Delete Profile": "Delete Profile",
+    "User Profile": "User Profile",
+    "Enter Username or Email": "Enter Username or Email",
+    "Current Password": "Current PIN",
+    "Login Successfull": "Login Successfull",
+    "The credentials does not match": "The credentials does not match",
+    "Account Has been Suspended": "Account Has been Suspended, Kindly contact us for support",
+    "Hold": "Hold",
+    "success": "Success",
+    "Please check email and verify your account": "Please check email and verify your account",
+    "Something went worng! Please try again": "Something went worng! Please try again",
+    "Registration successful": "Registration successful",
+    "Email varification code resend successfully": "SMS verification has been resent",
+    "Verification code does not match": "Verification code does not match",
+    "Email successfully verified": "Email successfully verified",
+    "KYC information successfully submitted": "KYC information successfully submitted",
+    "Your secret key not stored properly. Please contact with system administrator": "Your secret key not stored properly. Please contact with system administrator",
+    "Two factor verified successfully!": "Two factor verified successfully!",
+    "Failed to login. Please try again": "Failed to login. Please try again",
+    "Logout Successful": "Logout Successful",
+    "User doesn": "User doesn",
+    "Verification otp code sended to your email": "Verification otp code sended to your email",
+    "Session expired. Please try again": "Session expired. Please try again",
+    "OTP verification successful": "OTP verification successful",
+    "Oops password does not match": "Oops PIN does not match",
+    "Invalid Request. Please try again": "Invalid Request. Please try again",
+    "Password reset success. Please login with new password": "PIN reset success. Please login with new PIN",
+    "Add Money Information": "Add Money Information",
+    "Add Money Inserted Successfully": "Add Money Inserted Successfully",
+    "Transaction Failed. Record didn\\": "Transaction Failed. Record didn\\",
+    "Request user doesn\\": "Request user doesn\\",
+    "Transaction faild. Record didn\\": "Transaction faild. Record didn\\",
+    "Payment successful, Please Go Back Your App": "Payment successful, Please Go Back Your App",
+    "Added Money Canceled": "Added Money Canceled",
+    "Data fetched successfully": "Data fetched successfully",
+    "Language Data Fetch Successfully!": "Language Data Fetch Successfully!",
+    "Dashboard data successfully fetch!": "Dashboard data successfully fetch!",
+    "Notifications data successfully fetch!": "Notifications data successfully fetch!",
+    "Escrow approval pending information": "Escrow approval pending information",
+    "Escrow Payment Successful, Please Go Back Your App": "Escrow Payment Successful, Please Go Back Your App",
+    "Escrow Payment Canceled": "Escrow Payment Canceled",
+    "Escrow Conversation Information": "Escrow Conversation Information",
+    "Message Sending faild! Please try again": "Message Sending faild! Please try again",
+    "Escrow Message Send Successfully": "Escrow Message Send Successfully",
+    "Something went wrong": "Something went wrong",
+    "You have request to dispute this escrow successfully": "You have request to dispute this escrow successfully",
+    "You have successfully released the payment": "You have successfully released the payment",
+    "Email send successfully!": "Email send successfully!",
+    "Escrow Create Failed": "Escrow Create Failed",
+    "Escrow Create Cancel": "Escrow Create Cancel",
+    "Escrow Information": "Escrow Information",
+    "Escrow Create Data": "Escrow Create Data",
+    "User not found": "User not found",
+    "Insuficiant Balance": "Insuficiant Balance",
+    "Please follow the escrow limit": "Please follow the escrow limit",
+    "Insuficiant Balance.Here escrow charge will be substack with your wallet. Your escrow charge is": "Insuficiant Balance.Here escrow charge will be substack with your wallet. Your escrow charge is",
+    "Opps! Failed to upload attachment. Please try again": "Opps! Failed to upload attachment. Please try again",
+    "Escrow Inserted Successfully": "Escrow Inserted Successfully",
+    "Escrow failed. Record didn\\": "Escrow failed. Record didn\\",
+    "Escrow created Successful, Please Go Back Your App": "Escrow created Successful, Please Go Back Your App",
+    "Sorry, your payment information is invalid": "Sorry, your payment information is invalid",
+    "Money Exchange Information": "Money Exchange Information",
+    "Exchange money isn\\": "Exchange money isn\\",
+    "exchange_from_amount": "exchange_from_amount",
+    "You don\\": "You don\\",
+    "Money exchange successful, Please Go Back Your App": "Money exchange successful, Please Go Back Your App",
+    "Money Out Information!": "Money Out Information!",
+    "Invalid Gateway!": "Invalid Gateway!",
+    "Currency Not Setup Yet!": "Currency Not Setup Yet!",
+    "Please follow the transaction limit": "Please follow the transaction limit!",
+    "Insufficient Balance!": "Insufficient Balance!",
+    "Money out Inserted Successfully": "Money out Inserted Successfully",
+    "Something is wrong": "Something is wrong!",
+    "Invalid request, it is not manual gateway request": "Invalid request, it is not manual gateway request",
+    "Money out request send to admin successfully": "Money out request send to admin successfully",
+    "Profile successfully updated!": "Profile successfully updated!",
+    "Current password didn\\": "Current PIN didn\\",
+    "Password updated successfully!": "PIN updated successfully!",
+    "Something went wrong! Please try again": "Something went wrong! Please try again!",
+    "User deleted successfull": "User deleted successfull",
+    "Don": "Don",
+    "t login to your account": "t login to your account",
+    "Data fetch Successfully": "Data fetch Successfully",
+    "Google 2FA Updated Successfully!": "Google 2FA Updated Successfully!",
+    "Your profile type updated successfully": "Your role has been switched successfully",
+    "user.password.forgot.code.verify.form": "user.PIN.forgot.code.verify.form",
+    "Varification code sended to your email address": "Varification code sended to your email address",
+    "Approve": "Approve",
+    "Reject": "Reject",
+    "user.password.forgot": "user.PIN.forgot",
+    "Password Reset Token Expired": "PIN Reset Token Expired",
+    "Varification code resend success!": "Varification code resend success!",
+    "user.authorize.kyc": "user.authorize.kyc",
+    "Please submit kyc information": "Please submit kyc information",
+    "Please wait before admin approved your kyc information": "Please wait before admin approved your kyc information",
+    "Admin rejected your kyc information": "Admin rejected your kyc information",
     "user.add.money.index": "user.add.money.index",
     "Successfully added money": "Successfully added money",
     "You have canceled the payment": "You have canceled the payment",
@@ -753,6 +853,7 @@
     "Download For IOS": "Download For IOS",
     "These credentials do not match our records": "These credentials do not match our records",
     "System Maintenance": "System Maintenance",
+
     "Delivery Fee Amount": "Delivery Fee",
     "Advanced Payment Amount": "Advanced Payment Amount",
     "Return Fee Amount": "Return Fee Amount",
@@ -760,11 +861,12 @@
     "Policies": "Policies",
     "Policy Settings": "Policy Settings",
     "Select Policy": "Select Policy",
-    "Show": "Show",
-    "Delete": "Delete",
+    "Show":"Show",
+    "Delete":"Delete",
     "Create New Policy": "Create New Policy",
     "Payment Responsibilities": "Payment Responsibilities",
     "Delivery Fee Paid By": "Delivery Fee Paid By",
-    "No delivery timeframe required": "No delivery timeframe required",
-    "Yes, include delivery timeframe": "Yes, include delivery timeframe"
+    "No delivery timeframe required":"No delivery timeframe required",
+    "Yes, include delivery timeframe":"Yes, include delivery timeframe"
 }
+
